setup status and sys_info endpoints
